# ai-research-kb

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  users.example.yaml
.github/workflows/: ci.yml
examples/rag-pipeline-degerlendirmesi/: analiz.md  notlar.md  tasarim.comments.yaml  tasarim.md
research/: README.md
skills/: README.md
src/ai_research_kb/: __init__.py  cli.py  comments.py  config.py  consistency.py  frontmatter.py  llm.py  models.py  repo.py
src/ai_research_kb/web/: __init__.py  auth.py  deps.py  main.py  roles.py  schemas.py  users.py
src/ai_research_kb/web/routers/: auth.py  clickup.py  comments.py  consistency.py  docs.py  search.py  tasks.py
src/ai_research_kb/web/services/: clickup.py  clusters.py  search.py  tasks.py
tests/: conftest.py  test_comments.py  test_consistency.py  test_frontmatter.py
tests/web/: conftest.py  test_auth.py  test_clickup_api.py  test_clickup_service.py  test_comments_api.py  test_consistency_api.py  test_search_and_docs.py  test_tasks_api.py
web-ui/: Dockerfile  index.html  package-lock.json  package.json
web-ui/src/: App.jsx  api.js  markdown.js  roles.js  styles.css
web-ui/src/components/: Comments.jsx
web-ui/src/pages/: DocView.jsx  Login.jsx  Search.jsx  Tasks.jsx
