[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-research-kb"
version = "0.1.0"
description = "Self-hosted, git-native knowledge base that turns prose research docs into a queryable, self-consistent database and, eventually, tasks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ai-research-kb contributors" }]
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
llm = ["anthropic>=0.34"]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "PyJWT>=2.8",
    "bcrypt>=4.1",
    "httpx>=0.27",
]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27"]

[project.scripts]
ai-research-kb = "ai_research_kb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_research_kb"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
